--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "eslint": "^8.35.0",
     "eslint-config-next": "^13.2.1",
     "framer-motion": "^10.0.1",
